# chatx

./: .gitignore
client/android/: readme.md
client/desktop/: CMakeLists.txt  readme.md
client/desktop/src/: main.cpp
client/desktop/src/widget/: signinbox.cpp  signinbox.h  signinbox.ui  ui_signinbox.h
server/: chatx_protocol.md  pom.xml
server/broker/: pom.xml
server/broker/src/main/java/com/chatx/broker/: BrokerApplication.java  BrokerInitializer.java
server/broker/src/main/resources/: application.yml
server/broker/src/test/java/com/chatx/broker/: BrokerApplicationTests.java
server/commons/: pom.xml
server/commons/src/main/java/com/chatx/commons/: ApplicationInitializedListener.java  ChatxApp.java  ChatxProperties.java  HttpClientAutoConfiguration.java  Immutable.java  MessageSourceAutoConfiguration.java  NotNull.java  Nullable.java  ObjectMapperAutoConfiguration.java  PageHelperAutoConfiguration.java  ServletControllerExceptionHandler.java  SqlSessionAutoConfiguration.java  Time.java
server/commons/src/main/resources/: chatx-banner.txt  china_region.txt  common_messages_zh_CN.properties
server/security/: pom.xml
server/security/src/main/java/com/chatx/security/: BaseController.java  ChatxContextAwareAutoConfiguration.java  ChatxContextInterceptor.java  JwtAutoConfiguration.java  JwtProperties.java  (+1 more)
server/security/src/main/resources/keystore/: chatx.ks
server/user-admin/: pom.xml
server/user-admin/src/main/resources/: application.yml  messages_zh_CN.properties
server/user-admin/src/main/resources/mappers/: UserMappers.xml
(+70 files in other folders)
